# textglue

./: README.md  build.sh  index.html  precache-manifest.c14053c4bf5f499430c8ee57ef3f22ab.js  service-worker.js  textglue_wasm.js  textglue_wasm_bg.wasm
api/: db.json
css/: chunk-vendors.07546c14.css
js/: app.990bc430.js  app.990bc430.js.map  chunk-vendors.6de60966.js  chunk-vendors.6de60966.js.map
textglue-app/: dists.py  package-lock.json  package.json
textglue-app/public/: index.html  manifest.json
textglue-app/src/: App.vue  main.js
textglue-app/src/components/: ChapterEditor.vue  SnippetSelector.vue
textglue-lib/: Cargo.toml
textglue-lib/src/: lib.rs
textglue-server/: .gitignore  Cargo.toml
textglue-server/src/: main.rs
textglue-wasm/: Cargo.toml
textglue-wasm/src/: lib.rs
textglue-wasm/www/: app.html  app1.html  index.js  package-lock.json
