[package]
name = "textglue-wasm"
version = "0.1.0"
authors = ["Orest Dubay <orest3.dubay@gmail.com>"]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
cfg-if = "0.1.2"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.1", optional = true }

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
#
# Unfortunately, `wee_alloc` requires nightly Rust when targeting wasm for now.
wee_alloc = { version = "0.4.3", optional = true }
serde = "1.0.89"
serde_derive = "1.0.89"
serde_json = "1.0.39"
serde_yaml = "0.8.8"
lazy_static = "1.3.0"
js-sys = "0.3.17"
[dependencies.web-sys]
version = "0.3.17"
features = [ "console" ]

[dependencies.wasm-bindgen]
version = "0.2.40"
features = ["serde-serialize"]

[dependencies.textglue-lib]
path = "../textglue-lib"

[dev-dependencies]
wasm-bindgen-test = "0.2"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"

